Fixed alignment issue in main  section

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -51,7 +51,7 @@ nav ul li{
 
 }
 /* button styles 1*/
-.button-color{
+.button-color {
     background-color: #4E47FF;
     color: white;
     border: none;
@@ -63,6 +63,14 @@ nav ul li{
     position: relative;
     right: 150px;
 }
+
+.button-color:hover {
+    background-color: grey;
+}
+
+
+
+
 
 
 /* banner styles */
@@ -93,6 +101,10 @@ nav ul li{
     font-weight: bold;
 }
 
+.button-color2:hover {
+    background-color: grey;
+}
+
 
 /* main section style */
 
@@ -117,20 +129,38 @@ section ul li{
 
     list-style: none;
 }
+/* preview section styles */
 
+.preview-section-container{
+    display: flex;
+    align-items: center;
+}
+.section1{
+    text-align: left;
 
+}
 
 .button-color3{
     background-color: #4E47FF;
     color: white;
     border: none;
-    padding:10px 40px;
+    padding:10px 20px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
     margin-top: 5px;
-    margin-right: 200px;
+    /* margin-right: 10px; */
+    /* margin-left: 10px;     */
+    
+    
+
+}
+.nav-links2{
+    margin-top: 20px;
+}
+.button-color3:hover {
+    background-color: grey;
 }
 
 .preview-image{
@@ -236,22 +266,15 @@ main{
 
 
 /* last main section  */
+
+
 .heading-center{
     text-align: center;
 }
 
 .sec04{
     display: flex;
-
-}
-
-.section-header{
-    font-size: 80px;
-    font-weight: bold;
-    color: #000000;
-    margin-top: 200px;
-    max-width: 528px;
-    height: 230px;
+    
 
 }
 
@@ -262,7 +285,7 @@ main input[type="email"], main input[type="text"]{
     height: 30px;
     border-radius: 10px;
     border: 1px solid gray;
-    padding: 10px 20px;
+    padding: 10px 70px;
     font-size: 16px;
     margin-bottom: 19px;
     display: block;
@@ -272,12 +295,12 @@ main input[type="email"], main input[type="text"]{
 
 }
 
-.texarea-style{
+.textarea-style{
     width: 100%;
     height: 100px;
     border-radius: 10px;
     border: 1px solid gray;
-    padding: 10px 20px;
+    padding: 10px 70px;
     font-size: 16px;
     margin-bottom: 19px;
     display: block;
@@ -290,6 +313,35 @@ main input[type="email"], main input[type="text"]{
     margin-left: 120px;
     
     
+}
+
+.button-color300{
+    width: 155%;
+    height: 50px;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-align: center;
+    background-color: #4E47FF;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 5px;
+}
+.button-color300:hover {
+    background-color: grey;
+}
+/* header font size */
+
+.header-font-size{
+    font-size: 60px;
+    font-weight: bold;
+    color: #000000;
+    margin-top:150px;
+    max-width: 528px;
+    height: 230px;
+
 }
 
 
@@ -323,7 +375,7 @@ footer {
 }
 
 .footer-content{
-text-align: center;
+    text-align: center;
     padding: 50px;
     max-width: 1140px;
     margin: 0 auto;
